--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   </form>
 
   <ul class="user-details">
-    <li>Name: </li>
-    <li>Bio: </li>
-    <li>Favorite Books: </li>
-    <li>Favorite JavaScript Libraries: </li>
+    <li class="user-name">Name: </li>
+    <li class="user-bio">Bio: </li>
+    <li class="user-books">Favorite Books: </li>
+    <li class="user-libraries">Favorite JavaScript Libraries: </li>
   </ul>
 
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
