add "show form" button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <form class="edit-details" action="">
+  <form class="edit-details hidden" action="">
     <ul>
       <li>
         <input type="text" class="edit-name" placeholder="Name">
@@ -31,6 +31,8 @@
     <li class="user-books">Favorite Books: </li>
     <li class="user-libraries">Favorite JavaScript Libraries: </li>
   </ul>
+
+  <button class="show-edit"></button>
 
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="main.js"></script>
