separate behavior from css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li class="user-libraries">Favorite JavaScript Libraries: </li>
   </ul>
 
-  <button class="show-edit"></button>
+  <button class="show-edit">Show Form</button>
 
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="main.js"></script>
